traces/bug_422.txt
examples++-load/UMFPACK64.cpp:399: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/UMFPACK64.cpp:399:1: initialization of callDoLoadInit
397.   
398.   
399. > LOADFUNC(init22);

examples++-load/UMFPACK64.cpp:399:1: call to DoLoadInit
397.   
398.   
399. > LOADFUNC(init22);

examples++-load/UMFPACK64.cpp:399:1: call to addInitFunct
  397.   
  398.   
  399. > LOADFUNC(init22);

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
